[gd_scene load_steps=9 format=3 uid="uid://486c4p5tvfoy"]

[ext_resource type="Script" uid="uid://d36vkmwc2dcrp" path="res://ui/hud/hud.gd" id="1_d2gw2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.15, 0.12, 0.18, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.2, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.95, 0.25, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exp_bg"]
bg_color = Color(0.08, 0.1, 0.2, 0.9)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exp_fill"]
bg_color = Color(0.3, 0.5, 0.95, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_d2gw2")

[node name="HUDContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_top = 24.0
offset_right = 340.0
offset_bottom = 200.0
theme_override_constants/separation = 10

[node name="HealthSection" type="VBoxContainer" parent="HUDContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HealthRow" type="HBoxContainer" parent="HUDContainer/HealthSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthBar" type="ProgressBar" parent="HUDContainer/HealthSection/HealthRow"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HUDContainer/HealthSection/HealthRow"]
layout_mode = 2
size_flags_vertical = 1
text = "100 / 100"
vertical_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="HUDContainer"]
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_exp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_exp_fill")
value = 0.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="HUDContainer"]
layout_mode = 2
text = "Nivel: 1"

[node name="WaveLabel" type="Label" parent="HUDContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Oleada: 1"
vertical_alignment = 2
